--- a/index.html
+++ b/index.html
@@ -10,22 +10,30 @@
 
 <div class="container" id="app">
     <div class="card">
-        <h1>{{title}}</h1>
+        <h1 :style="{color: inputValue.length< 5 ? 'darkred' : 'darkblue',
+        fontSize: inputValue.length< 6 ? '2rem' : '1.5rem' }" >{{title}}</h1>
         <div class="form-control">
-            <input type="text" v-bind:placeholder="placeholderString" v-bind:value="inputValue" v-on:input="inputChangeHandler"
-            v-on:keypress.enter="addNewNote"/>
+            <input type="text" :placeholder="placeholderString"
+                   v-model="inputValue"                    @keypress.enter="addNewNote"/>
+<!--                   @input="inputChangeHandler"-->
+<!--                   @keypress.enter="addNewNote"/>-->
         </div>
-        <button class="btn" v-on:click="addNewNote">Добавить</button>
+        <button class="btn" @click="addNewNote">Добавить</button>
         <hr/>
-        <ul>
+        <ul class="list" v-if="notes.length!==0">
             <li class="list-item" v-for="(myNote, idx) in notes">
-              {{myNote}}
-                <button class="btn danger" v-on:click="removeNote(idx)">Удалить</button>
+<!--              <span :class="myNote.length > 5 ? 'primary' : 'bold'">({{ idx + 1}})  {{toUpperCase(myNote)}}</span>-->
+                <span :class="['bold', {'primary': myNote.length>5}]">({{ idx + 1}})  {{toUpperCase(myNote)}}</span>
+                <button class="btn danger" @click="removeNote(idx)">Удалить</button>
+            </li>
+            <hr>
+            <li>
+                <strong>Общее количество: {{notes.length}}</strong> | Удвоенное: {{doubleCountComputed}}
             </li>
         </ul>
+        <div v-if="notes.length===0">Заметок пока нет. Добавьте первую</div>
     </div>
 </div>
-
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="https://unpkg.com/vue@next"></script>
 <script src="app.js"></script>
