--- a/index.html
+++ b/index.html
@@ -5,35 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vue Basics</title>
     <link rel="stylesheet" href="theme.css"/>
+    <style>
+        [v-cloak]{
+            display: none;
+        }
+    </style>
 </head>
 <body>
 
-<div class="container" id="app">
-    <div class="card">
-        <h1 :style="{color: inputValue.length< 5 ? 'darkred' : 'darkblue',
-        fontSize: inputValue.length< 6 ? '2rem' : '1.5rem' }" >{{title}}</h1>
-        <div class="form-control">
-            <input type="text" :placeholder="placeholderString"
-                   v-model="inputValue"                    @keypress.enter="addNewNote"/>
-<!--                   @input="inputChangeHandler"-->
-<!--                   @keypress.enter="addNewNote"/>-->
+<div class="container pt-5" id="app" v-cloak>
+    <div class="card center">
+        <div v-html="myHtml">
         </div>
-        <button class="btn" @click="addNewNote">Добавить</button>
-        <hr/>
-        <ul class="list" v-if="notes.length!==0">
-            <li class="list-item" v-for="(myNote, idx) in notes">
-<!--              <span :class="myNote.length > 5 ? 'primary' : 'bold'">({{ idx + 1}})  {{toUpperCase(myNote)}}</span>-->
-                <span :class="['bold', {'primary': myNote.length>5}]">({{ idx + 1}})  {{toUpperCase(myNote)}}</span>
-                <button class="btn danger" @click="removeNote(idx)">Удалить</button>
+<!--        <h2 v-text="title"></h2>-->
+<!--        <h2 v-once>{{title}}</h2>-->
+<!--        <h2 v-pre>{{title}}</h2>-->
+
+<!--        <button class="btn" @click="title = 'Теперь другое название'">Изменить название</button>-->
+
+        <ul class="list" v-if="items.length">
+            <li class="list-item" v-for="(item,i) in eventItems" :key="item" @click="items.splice(i,1)">
+                <strong>{{item}}</strong>&nbsp;
+                <input type="text" @click.stop>
             </li>
-            <hr>
-            <li>
-                <strong>Общее количество: {{notes.length}}</strong> | Удвоенное: {{doubleCountComputed}}
-            </li>
+<!--            <li class="list-item" v-for="(value,key) in person">-->
+<!--             <strong>{{key}}</strong>  {{value}}-->
+<!--            </li>-->
         </ul>
-        <div v-if="notes.length===0">Заметок пока нет. Добавьте первую</div>
+        <h3 v-show="items.length === 0">Элементов нету</h3>
     </div>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="https://unpkg.com/vue@next"></script>
 <script src="app.js"></script>
