--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
 
 <!--        <button class="btn" @click="title = 'Теперь другое название'">Изменить название</button>-->
 
+        <div class="form-control">
+            <input type="text" @keyup.enter="addItem" ref="myInput">
+        </div>
+
         <ul class="list" v-if="items.length">
-            <li class="list-item" v-for="(item,i) in eventItems" :key="item" @click="items.splice(i,1)">
+            <li class="list-item" v-for="(item,i) in items" :key="item" @click.right.prevent="remove(i), log(item)">
                 <strong>{{item}}</strong>&nbsp;
                 <input type="text" @click.stop>
             </li>
